--- a/packages/emp-plugin-babel-vue-3/package.json
+++ b/packages/emp-plugin-babel-vue-3/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "EMP babel Vue3 plugin",
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
